--- a/index.html
+++ b/index.html
@@ -430,6 +430,15 @@
                                     <button class="btn-primary btn-secondary w-full">Inquire</button>
                                 </div>
                             </div>
+
+                            <div class="bg-white rounded-lg shadow-lg overflow-hidden transform transition-transform duration-300 hover:-translate-y-2" data-aos="fade-up" data-aos-delay="300">
+                                <img src="https://m.media-amazon.com/images/I/7189lOKweuL._AC_UF894,1000_QL80_.jpg" onerror="this.onerror=null; this.src='https://placehold.co/400x250/EEE/1a202c?text=Urban%20Elegance';" alt="City Commuter" class="w-full h-64 object-cover" />
+                                <div class="p-6">
+                                    <h3 class="text-2xl font-serif royal-red mb-3">Urban Elegance</h3>
+                                    <p class="text-gray-600 mb-4">Navigate the cityscape with sophistication and poise on our premier hybrid cycles.</p>
+                                    <button class="btn-primary btn-secondary w-full">Inquire</button>
+                                </div>
+                            </div>
                             <!-- Product Card: Cycling Gear & Accessories -->
                             <div class="bg-white rounded-lg shadow-lg overflow-hidden transform transition-transform duration-300 hover:-translate-y-2" data-aos="fade-up" data-aos-delay="500">
                                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTGza73TRboeCTeVc8vnrMHiOE2UNMpjTdxgA&s" onerror="this.onerror=null; this.src='https://placehold.co/400x250/EEE/1a202c?text=Accessories';" alt="Cycling Gear" class="w-full h-64 object-cover" />
@@ -439,6 +448,8 @@
                                     <button class="btn-primary btn-secondary w-full">Inquire</button>
                                 </div>
                             </div>
+
+                            
                         </div>
                          <section id="why-choose-us" class="section-padding bg-gray-50 mt-12" data-aos="fade-up">
                             <div class="container mx-auto text-center">
