--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Cycle Store</title>
+    <link rel="icon" href="https://lh3.googleusercontent.com/p/AF1QipOzZuJ4jlIzZF-CghUgGpaVFTYR-fqabMdDYNEQ=s680-w680-h510-rw" type="image/x-icon">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
