--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <nav class="container mx-auto flex justify-between items-center">
             <div class="flex items-center">
                 <!-- Logo Image: Removed border-2, border-royal-red, and p-1 classes -->
-                <img src="https://lh3.googleusercontent.com/p/AF1QipPVNT810PPAyfTFPJMUI7hz4bWofoSDoQkDrIlH=s680-w680-h510-rw" onerror="this.onerror=null; this.src='https://placehold.co/48x48/9B2C2C/FFF?text=CS';" alt="The Cycle Store Logo" class="h-14 w-14 mr-4 rounded-full" data-aos="zoom-in" data-aos-delay="200"/>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-jE3N2VoGZCLGPD0Zyhos17zelok2TkaFnw&s" onerror="this.onerror=null; this.src='https://placehold.co/48x48/9B2C2C/FFF?text=CS';" alt="The Cycle Store Logo" class="h-14 w-14 mr-4 rounded-full" data-aos="zoom-in" data-aos-delay="200"/>
                 <a href="#home" class="text-4xl font-serif royal-red" data-aos="fade-left" data-aos-delay="200">The Cycle Store</a>
             </div>
 
